--- a/docs/pages/surge-building-blocks/customizations/decentralized-sequencer.mdx
+++ b/docs/pages/surge-building-blocks/customizations/decentralized-sequencer.mdx
@@ -1,3 +1,8 @@
+---
+title: Decentralized Sequencer
+description: Shared Sequencer in Bitcoin L2 Architecture
+---
+
 # ➡️ Decentralized Sequencer [Shared Sequencer in Bitcoin L2 Architecture]
 
 Rollup deployed can leverage the benefits of the Shared Sequencer, creating efficiencies for interoperability.
