--- a/docs/pages/surge-building-blocks/customizations/decentralized-sequencer.mdx
+++ b/docs/pages/surge-building-blocks/customizations/decentralized-sequencer.mdx
@@ -1,5 +1,5 @@
 ---
-title: Decentralized Sequencer
+title: Surge | Decentralized Sequencer
 description: Shared Sequencer in Bitcoin L2 Architecture
 ---
 
