--- a/docs/pages/surge-building-blocks/customizations/decentralized-sequencer.mdx
+++ b/docs/pages/surge-building-blocks/customizations/decentralized-sequencer.mdx
@@ -3,6 +3,8 @@ title: Surge | Decentralized Sequencer
 description: Shared Sequencer in Bitcoin L2 Architecture
 ---
 
+import ZoomImage from "../../../components/ZoomImage";
+
 # ➡️ Decentralized Sequencer [Shared Sequencer in Bitcoin L2 Architecture]
 
 Rollup deployed can leverage the benefits of the Shared Sequencer, creating efficiencies for interoperability.
@@ -13,4 +15,7 @@ Shared sequencer minimizes the on-chain footprint, leading to significant reduct
 
 Integration of a shared sequencer into the Bitcoin L2 architecture would show up like this,
 
-<img src="/assets/decentralized-sequencer.png" alt="decentralized sequencer" />
+<ZoomImage
+  src="/assets/decentralized-sequencer.png"
+  alt="decentralized sequencer"
+/>
