--- a/docs/pages/surge-building-blocks/customizations/validity-rollups.mdx
+++ b/docs/pages/surge-building-blocks/customizations/validity-rollups.mdx
@@ -5,7 +5,7 @@ description: Shared Sequencer in Bitcoin L2 Architecture
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# ➡️ Decentralized Sequencer [Shared Sequencer in Bitcoin L2 Architecture]
+# Decentralized Sequencer [Shared Sequencer in Bitcoin L2 Architecture]
 
 Rollup deployed can leverage the benefits of the Shared Sequencer, creating efficiencies for interoperability.
 
