--- a/docs/pages/surge-building-blocks/high-availability-sequencer.mdx
+++ b/docs/pages/surge-building-blocks/high-availability-sequencer.mdx
@@ -5,7 +5,7 @@ description: Ensuring Continuous Operation in Bitcoin L2 Architecture
 
 # High Availability Sequencer [High Standard for Sequencers]
 
-To meet the demands of enterprise-grade deployments, we are committed to offering 99.9%+ SLAs for our sequencers, ensuring that network downtime is virtually eliminated.
+The Surge High Availability Sequencer is a robust, decentralized solution designed to ensure continuous and reliable transaction processing within the Surge ecosystem. Built with a focus on scalability and fault tolerance, our Sequencer guarantees seamless operation even under the most demanding conditions.
 
 ### Automated Failover with High Availability
 Incorporating an advanced failover system, Surge’s sequencer infrastructure runs multiple nodes across different data centers. Our sequencers dynamically elects a leader responsible for producing blocks, automatically handling node failures or network disruptions. This automated election protocol minimizes the risk of downtime, providing an SLA higher than traditional single-node setups.
