--- a/docs/pages/surge-building-blocks/high-availability-sequencer.mdx
+++ b/docs/pages/surge-building-blocks/high-availability-sequencer.mdx
@@ -3,16 +3,26 @@ title: Surge | High Availability Sequencer
 description: Ensuring Continuous Operation in Bitcoin L2 Architecture
 ---
 
-# High Availability Sequencer [High Standard for Sequencers]
+# High Availability Sequencer
 
-The Surge High Availability Sequencer is a robust, decentralized solution designed to ensure continuous and reliable transaction processing within the Surge ecosystem. Built with a focus on scalability and fault tolerance, our Sequencer guarantees seamless operation even under the most demanding conditions.
+Surge's high-standard sequencers are designed with scalability and fault tolerance in mind, ensuring smooth operation even under challenging conditions.
 
-### Automated Failover with High Availability
-Incorporating an advanced failover system, Surge’s sequencer infrastructure runs multiple nodes across different data centers. Our sequencers dynamically elects a leader responsible for producing blocks, automatically handling node failures or network disruptions. This automated election protocol minimizes the risk of downtime, providing an SLA higher than traditional single-node setups.
+### Key Features
+#### 1. Decentralized Architecture:
+The Sequencer operates in a decentralized manner, spreading the workload across multiple nodes to avoid single points of failure. This setup keeps the Sequencer running efficiently, even if there are network issues or attacks.
 
-### Zero Downtime Upgrades
-We’ve designed Surge to allow for zero downtime when upgrading software, deploying configuration changes, or even executing hard forks. By deeply integrating our sequencer technology with cloud-native systems like Kubernetes, we ensure that each node’s lifecycle and status are dynamically monitored, enabling seamless transitions during deployments.
+#### 2. Fault Tolerance:
+Equipped with redundancy and failover mechanisms, the Sequencer can automatically redirect transactions through different routes if any node goes down.
 
-### Surge SLA Guarantees
-- **99.9%+ Availability**: Surge sequencers are designed to ensure maximum uptime, with failover systems in place to handle unexpected disruptions.
-- **Zero Downtime Upgrades**: Deploy software upgrades and network changes without affecting live operations, ensuring that transactions continue to flow smoothly.
+#### 3. Scalability:
+As the number of transactions grows, the Sequencer can scale up to meet demand, keeping the network fast and responsive.
+
+#### 4. Optimized Performance:
+By batching and verifying transactions efficiently, the Sequencer minimizes delays and ensures quick finalization, which is crucial for high-performance applications.
+
+### How It Works?
+The Sequencer monitors the network continuously, organizing transactions into batches. These batches are then verified and recorded on the Bitcoin layer, using its security to finalize transactions.
+
+If a node fails, the Sequencer automatically triggers its failover protocols, rerouting tasks to other nodes to keep the service running smoothly. This ensures that users and applications experience no downtime or data loss.
+
+The Surge High Availability Sequencer is designed to deliver a reliable and efficient transaction processing experience, ensuring that operations remain uninterrupted even in the face of unexpected disruptions. 
