--- a/docs/pages/surge-building-blocks/high-availability-sequencer.mdx
+++ b/docs/pages/surge-building-blocks/high-availability-sequencer.mdx
@@ -5,7 +5,7 @@ description: Ensuring Continuous Operation in Bitcoin L2 Architecture
 
 # High Availability Sequencer
 
-Surge's high-standard sequencers are designed with scalability and fault tolerance in mind, ensuring smooth operation even under challenging conditions.
+Standard Sequencers are designed with scalability and fault tolerance in mind, ensuring smooth operation even under challenging conditions.
 
 ### Key Features
 #### 1. Decentralized Architecture:
